--- a/platforms/apple/Platforms/iphone/Info.plist
+++ b/platforms/apple/Platforms/iphone/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDisplayName</key>
-	<string>Rollup</string>
+	<string>Brisk Ball</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIcons</key>
@@ -44,14 +44,15 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>259</string>
+	<string>354</string>
 	<key>FacebookAppID</key>
-	<string>0</string>
+	<string>962549423874562</string>
 	<key>FacebookDisplayName</key>
 	<string>facebook</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fb</string>
+		<string>fbauth2</string>
 		<string>twitter</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
